--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="de">
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
+    <meta name="theme-color" content="#3f51b5"/>
+
+    <title>DresdenJS - PWA by Example</title>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="assets/css/material.min.css">
