--- a/public/welcome.html
+++ b/public/welcome.html
@@ -43,6 +43,14 @@
     <main class="mdl-layout__content">
       <div class="page-content">
         <div class="mdl-grid">
+          <div class="mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title" style="background: url('assets/icons/icon512x512.png'); background-size: cover; height: 396px; max-width: 396px">
+              <h2 class="mdl-card__title-text">Welcome</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              Welcome to my PWA Talk
+            </div>
+          </div>
         </div>
       </div>
     </main>
@@ -60,6 +68,5 @@
 
   <script src="assets/js/material.min.js"></script>
   <script src="assets/js/app.js"></script>
-  <script src="assets/js/home.js"></script>
   </body>
 </html>
