--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <div class="mdl-layout__drawer">
       <span class="mdl-layout-title">Title</span>
       <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="/">Article</a>
         <a class="mdl-navigation__link" id="backgroundSync" href="#">Post Article</a>
         <a class="mdl-navigation__link" id="helloNotification" href="#">Hello Notification</a>
       </nav>
