--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head lang="de">
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <meta name="theme-color" content="#3f51b5"/>
+    <meta name="theme-color" content="#f7df1e"/>
 
     <title>DresdenJS - PWA by Example</title>
 
