improve background sync

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -3,7 +3,7 @@
   <head lang="de">
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <meta name="theme-color" content="#3f51b5"/>
+    <meta name="theme-color" content="#f7df1e"/>
 
     <title>DresdenJS - PWA by Example</title>
 
@@ -35,6 +35,7 @@
     <div class="mdl-layout__drawer">
       <span class="mdl-layout-title">Title</span>
       <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="/">Article</a>
         <a class="mdl-navigation__link" id="backgroundSync" href="#">Post Article</a>
         <a class="mdl-navigation__link" id="helloNotification" href="#">Hello Notification</a>
       </nav>
