--- a/public/welcome.html
+++ b/public/welcome.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-  <head lang="de">
+<html lang="de">
+  <head>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="#f7df1e"/>
