--- a/public/welcome.html
+++ b/public/welcome.html
@@ -7,6 +7,7 @@
 
     <title>DresdenJS - PWA by Example</title>
 
+    <link rel="icon" type="image/png" href="assets/icons/icon144x144.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="assets/css/material.min.css">
