improve background sync example

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       <span class="mdl-layout-title">Title</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="/">Article</a>
-        <a class="mdl-navigation__link" id="backgroundSync" href="#">Post Article</a>
+        <a class="mdl-navigation__link" href="post_article.html">Post Article</a>
         <a class="mdl-navigation__link" id="helloNotification" href="#">Hello Notification</a>
       </nav>
     </div>
@@ -59,6 +59,8 @@
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/idb@2.1.0/lib/idb.min.js"></script>
 
   <script src="assets/js/material.min.js"></script>
   <script src="assets/js/app.js"></script>
