--- a/public/welcome.html
+++ b/public/welcome.html
@@ -37,7 +37,7 @@
       <span class="mdl-layout-title">Title</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="/">Article</a>
-        <a class="mdl-navigation__link" id="backgroundSync" href="#">Post Article</a>
+        <a class="mdl-navigation__link" href="post_article.html">Post Article</a>
         <a class="mdl-navigation__link" id="helloNotification" href="#">Hello Notification</a>
       </nav>
     </div>
